--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*View Report Page*/
 
-#copyDataBtn {
-    color: #aaa;
+.copyDataBtn {
+    color: #aaa!important;
     background-color: #eee;
     border-color: #eee;
 }
