swapping out html template format. i18n for config json

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*View Report Page*/
 
-.copyDataBtn {
+#rtCopyDataBtn {
     color: #aaa!important;
     background-color: #eee;
     border-color: #eee;
